--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,63 +1,42 @@
 @import "../css/vendor/bourbon/bourbon";
 @import "../css/vendor/neat/neat";
-
 * {
     border: 1px solid red;
 }
 
 body {
-    padding: 100px;
+    padding: 50px;
     height: 100%;
     background-color: #f3cc0c;
     font-size: 12pt;
-}
-
-.sidebarWrapper {
-    @include span-columns(3);
-    overflow: hidden;
-    clear: both;
 }
 
 .container {
     height: 100%;
 }
 
-// div {
-//   padding-top: 20px;
-//   height: 50px;
-//   margin-left: 50px;
-// }
-input,
-#socialMedia {
+fieldset {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input {
+    margin: 20px;
     height: 40px;
-    margin-left: 50px;
-}
-
-#linkedin,
-#twitter {
-    margin-left: 30px;
-    margin-right: 40px;
-}
-
-#email,
-#phone {
-    margin-left: 20px;
-    margin-right: 20px;
+    border-radius: 30px;
+    text-align: center;
+    letter-spacing: .5em;
 }
 
 button {
     background-color: red;
     color: white;
-    width: 100px;
-    letter-spacing: .2em;
+    width: 70px;
+    height: 70px;
+    // letter-spacing: .1em;
+    text-align: center;
+    font-size: 10pt;
     margin-top: 2em;
-}
-
-label,
-#socialMedia {
-    letter-spacing: .5em;
-    font-weight: bold;
-    font-size: 14pt;
-    margin-right: .3em;
-    margin-left: 2em;
+    float: right;
+    border-radius: 50%;
 }
