--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -8,7 +8,13 @@ body {
     padding: 50px;
     height: 100%;
     background-color: #f3cc0c;
-    font-size: 12pt;
+}
+h1 {
+    // font-family: 'Roboto Mono';
+    // font-family: 'Teko' sans-serif;
+    font-family: Gruppo;
+    font-weight: 400;
+    text-align: center;
 }
 
 .container {
@@ -25,7 +31,9 @@ input {
     height: 40px;
     border-radius: 30px;
     text-align: center;
-    letter-spacing: .5em;
+    letter-spacing: .2em;
+    font-family: 'Roboto Mono';
+    font-weight: 100;
 }
 
 button {
